[package]
name = "sling"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Sequentially lockign (SeqLock) Ring Buffer"
homepage = "https://docs.rs/sling"
documentation = "https://docs.rs/sling"
repository = "https://github.com/emilHof/sling"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
nightly = []

[dependencies]
arbitrary = { version = "1.2.2", optional = true }

[dev-dependencies]
criterion = "0.4"
lockfree = "0.5"

[[bench]]
name = "buffer"
harness = false
